# openengine

./: .gitignore  README.md  main.py  pyproject.toml
openengine/engine/: backtester.py
openengine/execution/: order_manager.py
openengine/strategies/: sample_strategy.py
